--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -63,7 +63,6 @@
 		font-weight: _font(weight-bold);
 		line-height: 1.5;
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
-		text-transform: uppercase;
 		letter-spacing: _font(letter-spacing);
 
 		a {
@@ -168,6 +167,14 @@
 		border: 0;
 		border-bottom: solid _size(border-width) _palette(border);
 		margin: (_size(element-margin) * 1.375) 0;
+	}
+
+	.galleryContainer h3 {
+		margin-top: 5vw;
+		margin-bottom: 2vw;
+		font-size: 28px;
+		font-weight: 300;
+		text-align: center;
 	}
 
 	.align-left {
