--- a/src/assets/scss/base/_page.scss
+++ b/src/assets/scss/base/_page.scss
@@ -52,10 +52,11 @@ div.back {
 
 #price {width: 100% !important}
 .prContainer span {
-        font-size: 14px !important;
-        color: #ffffff  !important;
-        font-family: "Source Sans Pro", sans-serif  !important;
-    }
+	font-size: 14px !important;
+  color: #ffffff  !important;
+  font-family: "Source Sans Pro", sans-serif  !important;
+	font-weight: 400;
+}
 
 .prContainer table tbody tr { border: none !important}
 
@@ -74,6 +75,7 @@ article#services span {
     font-size: 14px !important;
     color: #ffffff  !important;
     font-family: "Source Sans Pro", sans-serif  !important;
+		font-weight: 400;
 }
 
 article#services ul li p {margin: 0 !important}
