--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -5,7 +5,7 @@
 ///
 
 /* Header */
-
+#wrapper {background: rgba(0,0,0,.3) !important}
 #header {
   @include vendor('display', 'flex');
   @include vendor('flex-direction', 'column');
@@ -17,22 +17,6 @@
       'filter #{_duration(article)} ease-in-out',
       'opacity #{_duration(article)} ease-in-out'
     )
-  );
-  background-image: -moz-radial-gradient(
-    rgba(0, 0, 0, 0.25) 25%,
-    rgba(0, 0, 0, 0) 55%
-  );
-  background-image: -webkit-radial-gradient(
-    rgba(0, 0, 0, 0.25) 25%,
-    rgba(0, 0, 0, 0) 55%
-  );
-  background-image: -ms-radial-gradient(
-    rgba(0, 0, 0, 0.25) 25%,
-    rgba(0, 0, 0, 0) 55%
-  );
-  background-image: radial-gradient(
-    rgba(0, 0, 0, 0.25) 25%,
-    rgba(0, 0, 0, 0) 55%
   );
   max-width: 100%;
   text-align: center;
