--- a/src/assets/scss/layout/_bg.scss
+++ b/src/assets/scss/layout/_bg.scss
@@ -72,7 +72,7 @@
 
 .iconHolder {
   background-position: center;
-  background-size: 50px;
+  background-size: auto 50px;
   background-repeat: no-repeat;
   z-index: 1;
   display: block;
@@ -83,11 +83,13 @@
 
 article#services {width: 80% !important}
 
-.references .iconHolder  {background-image: url('../../images/references.png')}
-.contact .iconHolder {background-image: url('../../images/contact.png')}
-.aboutus .iconHolder {background-image: url('../../images/aboutus.png')}
-.prices .iconHolder {background-image: url('../../images/prices.png')}
-.services .iconHolder {background-image: url('../../images/services.png')}
+// .references .iconHolder  {background-image: url('../../images/references.png')}
+// .contact .iconHolder {background-image: url('../../images/contact.png')}
+// .aboutus .iconHolder {background-image: url('../../images/aboutus.png')}
+// .prices .iconHolder {background-image: url('../../images/prices.png')}
+// .services .iconHolder {background-image: url('../../images/services.png')}
+
+.iconHolder {background-image: url('../../images/icon_sprite.png')}
 
 @media screen and (max-width: 480px) {
   .iconHolder {margin-top: 9px}
